<resources>
    <string name="app_name">School Management System</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_dashboard">Dashboard</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Anaya Tech</string>
    <string name="nav_header_subtitle">anaya.info@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_communicate">Communicate</string>
    <string name="nav_rate_us">Rate us</string>
    <string name="nav_support">Support</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_share_app">Share App</string>
    <string name="nav_send_report">Send Report</string>
    <string name="nav_logout">Logout</string>
    <string name="label_about_us">About us</string>
    <string name="label_students_detail">Students Detail</string>
    <string name="label_our_location">Our Location</string>
    <string name="label_notice_board">Notice Board</string>
    <string name="label_principle_message">Principle Message</string>
    <string name="label_photos_gallery">Photos Gallery</string>
    <string name="label_account_sections">Account Sections</string>
    <string name="title_activity_maps">Map</string>
    <string name="in_the_las">The John F. Kennedy School of Government at Harvard University is a graduate and professional school that brings together students, scholars and practitioners who combine thought and action to make the world a better place.\n\n
        We believe that smart public policy and inspired public leadership can make people’s lives safer, more prosperous, and more fulfilling. Harvard Kennedy School teaches current and future leaders the skills they need to effectively advance the public purpose in the public, nonprofit, and private sectors. Our renowned faculty and trailblazing research centers pioneer bold new ideas. And as the most international school at Harvard, we convene an intellectual exchange among global leaders in the Forum, visiting experts in the classroom and our diverse HKS community.
\n\nYou can be part of this endeavor. Explore and learn more about Harvard Kennedy School</string>

</resources>
